applications/infrastructure/ingress/templates/kafka-ui-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
spec:
  type: ExternalName
  externalName: kafka-ui.kafka-ui.svc.cluster.local
