applications/infrastructure/ingress/templates/minio-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: ingress

spec:
  type: ExternalName
  externalName: minio.minio.svc.cluster.local
