applications/infrastructure/ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress

spec:
  ingressClassName: nginx

  rules:
  - host: app.kafka.ophkmh.com
    http: 
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80


      - path: /api
        pathType: Prefix
        backend:
          service:
            name: image-service
            port:
              number: 8080
